--- a/Kaiju_Email_Verifier_by_Central_&_CompaniesData.ipynb
+++ b/Kaiju_Email_Verifier_by_Central_&_CompaniesData.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPWyyXa+NThldJWI3xl1Pz2",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyN7luA0iJgWY6+3bDTpzHzl",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -374,7 +375,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -5820,40 +5821,56 @@
         }
       ],
       "source": [
-        "# Centraldecomunicacion.es & CompaniesData.cloud\n",
-        "# High-concurrency Email Quality Auditor for Google Colab (single-cell version)\n",
-        "# -----------------------------------------------------------------------------\n",
-        "# This tool is designed for internal and client use by:\n",
-        "#   - Centraldecomunicacion.es  (Central de Comunicación, Spain)\n",
-        "#   - CompaniesData.cloud       (European B2B company databases)\n",
+        "# =============================================================================\n",
+        "# Centraldecomunicacion.es & CompaniesData.cloud – Email Quality Validation Tool\n",
+        "# Google Colab – single-cell version (Markdown + Code as comments + Python)\n",
+        "# =============================================================================\n",
         "#\n",
-        "# IMPORTANT:\n",
-        "# ----------\n",
-        "# This is the SAME validation method and logic that Centraldecomunicacion.es\n",
-        "# and CompaniesData.cloud use internally to audit and contract \"valid email\"\n",
-        "# datasets before delivering them to clients. This is one of the reasons why\n",
-        "# our email databases have:\n",
-        "#   - very low bounce rates\n",
-        "#   - high technical quality\n",
-        "#   - strong reputation for reliability in campaigns\n",
+        "# ABOUT THIS NOTEBOOK\n",
+        "# -------------------\n",
+        "# This Google Colab cell implements the email validation pipeline used internally by\n",
+        "#   - Centraldecomunicacion.es → https://www.centraldecomunicacion.es/\n",
+        "#   - CompaniesData.cloud      → https://companiesdata.cloud/\n",
+        "#\n",
+        "# to audit and clean B2B email databases before delivering them to clients.\n",
+        "#\n",
+        "# It focuses on:\n",
+        "#   - High-concurrency DNS checks (A / AAAA / MX)\n",
+        "#   - Optional SPF, DMARC and DKIM inspection (ultra mode)\n",
+        "#   - Disposable domain detection\n",
+        "#   - Syntax validation via `pyisemail`\n",
+        "#   - Automatic detection of the email column in CSV / Excel files\n",
+        "#   - Generation of two Excel outputs:\n",
+        "#       * *_VALIDATED.xlsx → full dataset with technical fields + QualityScore\n",
+        "#       * *_CLEAN.xlsx     → campaign-ready email list with low estimated bounce rate\n",
+        "#\n",
+        "# This is the SAME method used when we contract and validate “valid email” datasets\n",
+        "# for Centraldecomunicacion.es and CompaniesData.cloud. That is why our B2B email lists\n",
+        "# are known for their maximum technical quality and very low bounce rates.\n",
+        "#\n",
+        "# If you are a marketing agency, consultant, student or company working with\n",
+        "# business email databases, you can use this cell to:\n",
+        "#   - Audit the technical quality of any email list.\n",
+        "#   - Estimate the bounce rate before running a campaign.\n",
+        "#   - Produce a transparent validation report for your clients or internal team.\n",
         "#\n",
         "# HOW TO USE (STEP BY STEP)\n",
         "# -------------------------\n",
-        "# 1) Run this cell.\n",
+        "# 1) Run this cell in Google Colab.\n",
         "# 2) Follow the console instructions:\n",
-        "#      - Upload an Excel (.xls/.xlsx) or CSV file.\n",
-        "#      - Choose validation mode:\n",
-        "#           1 = Normal   → Syntax + domain DNS (fast).\n",
-        "#           2 = Advanced → Normal + MX records (slower, more precise).\n",
-        "#           3 = Ultra    → Advanced + SPF/DMARC/DKIM + disposable check (slowest).\n",
+        "#       - Upload an Excel (.xls/.xlsx) or CSV file.\n",
+        "#       - Choose validation mode:\n",
+        "#            1 = Normal   → Syntax + domain DNS (fast).\n",
+        "#            2 = Advanced → Normal + MX records (slower, more precise).\n",
+        "#            3 = Ultra    → Advanced + SPF/DMARC/DKIM + disposable check (slowest).\n",
         "# 3) The tool will:\n",
-        "#      - Auto-detect the email column (no need to specify it).\n",
-        "#      - Validate all emails in parallel (DNS/MX/SPF/DMARC/DKIM, depending on mode).\n",
-        "#      - Compute a quality score and a label for each email.\n",
+        "#       - Auto-detect the email column (no need to specify it).\n",
+        "#       - Validate all emails in parallel (DNS/MX/SPF/DMARC/DKIM, depending on mode).\n",
+        "#       - Compute a quality score and a label for each email.\n",
         "# 4) At the end it will generate TWO Excel files and trigger their download:\n",
-        "#      - <name>_VALIDATED.xlsx → Full dataset + technical columns + QualityScore + QualityLabel.\n",
-        "#      - <name>_CLEAN.xlsx     → Only high-quality, non-disposable emails\n",
-        "#                                (Status == \"Valid\" and QualityScore ≥ CLEAN_MIN_SCORE).\n",
+        "#       - <name>_VALIDATED.xlsx → Full dataset + technical columns + QualityScore + QualityLabel.\n",
+        "#       - <name>_CLEAN.xlsx     → Only high-quality, non-disposable emails\n",
+        "#                                 (Status == \"Valid\" and QualityScore ≥ CLEAN_MIN_SCORE).\n",
         "#\n",
         "# CONSOLE SUMMARY\n",
         "# ---------------\n",
@@ -5865,7 +5882,13 @@
         "#\n",
         "# You can show this console output to clients as a transparency report:\n",
         "# “This is the same technical validation we use at Centraldecomunicacion.es\n",
-        "#  / CompaniesData.cloud to guarantee maximum email quality in our databases.”\n",
+        "#  and CompaniesData.cloud to guarantee maximum email quality in our databases.”\n",
+        "#\n",
+        "# NOTE:\n",
+        "# -----\n",
+        "# This cell is designed to be friendly for GitHub as well (no Jupyter widget metadata).\n",
+        "# All explanation is kept as Python comments for SEO and documentation purposes.\n",
+        "# =============================================================================\n",
         "\n",
         "!pip install --quiet dnspython tqdm pyisemail openpyxl\n",
         "\n",
@@ -5879,8 +5902,7 @@
         "import pandas as pd\n",
         "import dns.resolver\n",
         "import pyisemail\n",
-        "from google.colab import files\n",
-        "from tqdm.auto import tqdm\n",
+        "from tqdm import tqdm\n",
         "\n",
         "# -----------------------\n",
         "# Global parameters\n",
@@ -5897,7 +5919,6 @@
         "\n",
         "SHOW_ASCII_STATS = True\n",
         "CLEAN_MIN_SCORE = 70      # Minimum score for an email to be kept in CLEAN file\n",
-        "\n",
         "\n",
         "resolver = dns.resolver.Resolver()\n",
         "resolver.timeout = DNS_TIMEOUT\n",
@@ -6447,6 +6468,8 @@
         "    file_name: str,\n",
         "    mode: str = \"normal\",\n",
         ") -> None:\n",
+        "    from google.colab import files\n",
+        "\n",
         "    base, _ = os.path.splitext(file_name)\n",
         "    validated_output = f\"{base}_VALIDATED.xlsx\"\n",
         "    clean_output = f\"{base}_CLEAN.xlsx\"\n",
@@ -6511,6 +6534,8 @@
         "# Interactive entrypoint\n",
         "# -----------------------\n",
         "def run_interactive() -> None:\n",
+        "    from google.colab import files\n",
+        "\n",
         "    print_intro_banner()\n",
         "    print(\">>> STEP 1: File upload\")\n",
         "    print(\"Please select an Excel (.xls/.xlsx) or CSV file from your system.\")\n",
