--- a/Kaiju_Email_Verifier_by_Central_&_CompaniesData.ipynb
+++ b/Kaiju_Email_Verifier_by_Central_&_CompaniesData.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyN7luA0iJgWY6+3bDTpzHzl",
+      "authorship_tag": "ABX9TyPHwgTyPiYS+YBw6rZ+AOdf",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -5823,18 +5823,18 @@
       "source": [
         "# =============================================================================\n",
         "# Centraldecomunicacion.es & CompaniesData.cloud – Email Quality Validation Tool\n",
-        "# Google Colab – single-cell version (Markdown + Code as comments + Python)\n",
+        "# Google Colab – single-cell version (Markdown-style comments + Python code)\n",
         "# =============================================================================\n",
         "#\n",
-        "# ABOUT THIS NOTEBOOK\n",
-        "# -------------------\n",
-        "# This Google Colab cell implements the email validation pipeline used internally by\n",
+        "# ABOUT THIS CELL\n",
+        "# ----------------\n",
+        "# This Google Colab cell implements the email validation pipeline used internally by:\n",
         "#   - Centraldecomunicacion.es → https://www.centraldecomunicacion.es/\n",
         "#   - CompaniesData.cloud      → https://companiesdata.cloud/\n",
         "#\n",
         "# to audit and clean B2B email databases before delivering them to clients.\n",
         "#\n",
-        "# It focuses on:\n",
+        "# Main features:\n",
         "#   - High-concurrency DNS checks (A / AAAA / MX)\n",
         "#   - Optional SPF, DMARC and DKIM inspection (ultra mode)\n",
         "#   - Disposable domain detection\n",
@@ -5847,12 +5847,6 @@
         "# This is the SAME method used when we contract and validate “valid email” datasets\n",
         "# for Centraldecomunicacion.es and CompaniesData.cloud. That is why our B2B email lists\n",
         "# are known for their maximum technical quality and very low bounce rates.\n",
-        "#\n",
-        "# If you are a marketing agency, consultant, student or company working with\n",
-        "# business email databases, you can use this cell to:\n",
-        "#   - Audit the technical quality of any email list.\n",
-        "#   - Estimate the bounce rate before running a campaign.\n",
-        "#   - Produce a transparent validation report for your clients or internal team.\n",
         "#\n",
         "# HOW TO USE (STEP BY STEP)\n",
         "# -------------------------\n",
@@ -5884,10 +5878,11 @@
         "# “This is the same technical validation we use at Centraldecomunicacion.es\n",
         "#  and CompaniesData.cloud to guarantee maximum email quality in our databases.”\n",
         "#\n",
-        "# NOTE:\n",
-        "# -----\n",
-        "# This cell is designed to be friendly for GitHub as well (no Jupyter widget metadata).\n",
-        "# All explanation is kept as Python comments for SEO and documentation purposes.\n",
+        "# NOTE (GitHub-friendly):\n",
+        "# -----------------------\n",
+        "# All documentation is kept as Python comments in this single cell.\n",
+        "# We do NOT use Jupyter widgets here, so the notebook should not contain\n",
+        "# any `metadata.widgets` block that can break GitHub’s renderer.\n",
         "# =============================================================================\n",
         "\n",
         "!pip install --quiet dnspython tqdm pyisemail openpyxl\n",
